Feat: Update README and add detailed notes on data preprocessing techniques

--- a/data_preprocessing/data_preprocesing_tools.ipynb
+++ b/data_preprocessing/data_preprocesing_tools.ipynb
@@ -18,113 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "6c605d8b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting numpy\n",
-      "  Using cached numpy-2.3.3-cp312-cp312-win_amd64.whl.metadata (60 kB)\n",
-      "Using cached numpy-2.3.3-cp312-cp312-win_amd64.whl (12.8 MB)\n",
-      "Installing collected packages: numpy\n",
-      "Successfully installed numpy-2.3.3\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting matplotlib\n",
-      "  Downloading matplotlib-3.10.6-cp312-cp312-win_amd64.whl.metadata (11 kB)\n",
-      "Collecting contourpy>=1.0.1 (from matplotlib)\n",
-      "  Downloading contourpy-1.3.3-cp312-cp312-win_amd64.whl.metadata (5.5 kB)\n",
-      "Collecting cycler>=0.10 (from matplotlib)\n",
-      "  Downloading cycler-0.12.1-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Collecting fonttools>=4.22.0 (from matplotlib)\n",
-      "  Downloading fonttools-4.60.0-cp312-cp312-win_amd64.whl.metadata (113 kB)\n",
-      "Collecting kiwisolver>=1.3.1 (from matplotlib)\n",
-      "  Downloading kiwisolver-1.4.9-cp312-cp312-win_amd64.whl.metadata (6.4 kB)\n",
-      "Requirement already satisfied: numpy>=1.23 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from matplotlib) (2.3.3)\n",
-      "Requirement already satisfied: packaging>=20.0 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from matplotlib) (25.0)\n",
-      "Collecting pillow>=8 (from matplotlib)\n",
-      "  Downloading pillow-11.3.0-cp312-cp312-win_amd64.whl.metadata (9.2 kB)\n",
-      "Collecting pyparsing>=2.3.1 (from matplotlib)\n",
-      "  Downloading pyparsing-3.2.5-py3-none-any.whl.metadata (5.0 kB)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from matplotlib) (2.9.0.post0)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from python-dateutil>=2.7->matplotlib) (1.17.0)\n",
-      "Downloading matplotlib-3.10.6-cp312-cp312-win_amd64.whl (8.1 MB)\n",
-      "   ---------------------------------------- 0.0/8.1 MB ? eta -:--:--\n",
-      "   -------------------------------------- - 7.9/8.1 MB 54.3 MB/s eta 0:00:01\n",
-      "   ---------------------------------------- 8.1/8.1 MB 42.0 MB/s eta 0:00:00\n",
-      "Downloading contourpy-1.3.3-cp312-cp312-win_amd64.whl (226 kB)\n",
-      "Downloading cycler-0.12.1-py3-none-any.whl (8.3 kB)\n",
-      "Downloading fonttools-4.60.0-cp312-cp312-win_amd64.whl (2.3 MB)\n",
-      "   ---------------------------------------- 0.0/2.3 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 2.3/2.3 MB 64.6 MB/s eta 0:00:00\n",
-      "Downloading kiwisolver-1.4.9-cp312-cp312-win_amd64.whl (73 kB)\n",
-      "Downloading pillow-11.3.0-cp312-cp312-win_amd64.whl (7.0 MB)\n",
-      "   ---------------------------------------- 0.0/7.0 MB ? eta -:--:--\n",
-      "   ---------------------------------------- 7.0/7.0 MB 86.2 MB/s eta 0:00:00\n",
-      "Downloading pyparsing-3.2.5-py3-none-any.whl (113 kB)\n",
-      "Installing collected packages: pyparsing, pillow, kiwisolver, fonttools, cycler, contourpy, matplotlib\n",
-      "Successfully installed contourpy-1.3.3 cycler-0.12.1 fonttools-4.60.0 kiwisolver-1.4.9 matplotlib-3.10.6 pillow-11.3.0 pyparsing-3.2.5\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting pandas\n",
-      "  Using cached pandas-2.3.2-cp312-cp312-win_amd64.whl.metadata (19 kB)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from pandas) (2.3.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
-      "Collecting pytz>=2020.1 (from pandas)\n",
-      "  Using cached pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
-      "Collecting tzdata>=2022.7 (from pandas)\n",
-      "  Using cached tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\anovads\\machine-learning-a-z\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
-      "Using cached pandas-2.3.2-cp312-cp312-win_amd64.whl (11.0 MB)\n",
-      "Using cached pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
-      "Using cached tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
-      "Installing collected packages: pytz, tzdata, pandas\n",
-      "Successfully installed pandas-2.3.2 pytz-2025.2 tzdata-2025.2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 24.3.1 -> 25.2\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!pip install numpy\n",
     "!pip install matplotlib\n",
-    "!pip install pandas"
+    "!pip install pandas\n",
+    "!pip install scikit-learn"
    ]
   },
   {
@@ -137,14 +39,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "6f3b36d3",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.impute import SimpleImputer"
    ]
   },
   {
@@ -157,59 +60,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "id": "3cdecd99",
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = pd.read_csv('../data/data_preprocessing_data/Data.csv')\n",
-    "x = dataset.iloc[:, :-1].values\n",
+    "X = dataset.iloc[:, :-1].values\n",
     "y = dataset.iloc[:, -1].values"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "4ee2a593",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['France' 44.0 72000.0]\n",
-      " ['Spain' 27.0 48000.0]\n",
-      " ['Germany' 30.0 54000.0]\n",
-      " ['Spain' 38.0 61000.0]\n",
-      " ['Germany' 40.0 nan]\n",
-      " ['France' 35.0 58000.0]\n",
-      " ['Spain' nan 52000.0]\n",
-      " ['France' 48.0 79000.0]\n",
-      " ['Germany' 50.0 83000.0]\n",
-      " ['France' 37.0 67000.0]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(x)"
+    "print(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "63585057",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['No' 'Yes' 'No' 'No' 'Yes' 'Yes' 'No' 'Yes' 'No' 'Yes']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d7e1f7b",
+   "metadata": {},
+   "source": [
+    "## Taking care of missing data "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "68d57e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imputer = SimpleImputer(missing_values=np.nan, strategy='mean')\n",
+    "imputer = imputer.fit(X[:, 1:3])\n",
+    "imputer.transform(X[:, 1:3])\n",
+    "X[:, 1:3] = imputer.transform(X[:, 1:3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb29ae68",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a35ecabe",
+   "metadata": {},
+   "source": [
+    "## Encoding categorical data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39bf19f3",
+   "metadata": {},
+   "source": [
+    "### Encoding the Independent Variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "26aa51ea",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "ct = ColumnTransformer(transformers=[('encoder', OneHotEncoder(), [0])], remainder='passthrough')\n",
+    "X = np.array(ct.fit_transform(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "86e054e9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(X)"
    ]
   }
  ],
